complte language functionality for all lang for loggedout pages

--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -215,7 +215,7 @@
     "If_you_are_not_registered_please": "Если вы еще не зарегистрированы, пожалуйста,",
     "click_here": "нажмите здесь",
     "Register_with_your_email_address": "Зарегистрируйтесь с вашим адресом электронной почты",
-    "Register_for_Aimedis_V2": "Регистрация в Aimedis V2",
+    "Register_for_Aimedis_V2": "Регистрация в",
     "Click_here_to_upload_your_license": "Нажмите здесь, чтобы загрузить лицензию",
     "request_to_the_Aimedis_health_newletter": "Я хочу получать новостную рассылку от Aimedis (необязательно).",
     "agree_to_our_terms_of_use": "Выбирая данный пункт, я соглашаюсь с условиями использования и даю согласие на сбор, обработку и использование моих персональных данных. Подробная информация представлена в нашей политике конфиденциальности.",
@@ -497,137 +497,169 @@
     "conditionemergency": "Настоящим я подтверждаю, что мне необходимо получить доступ к данным пациента в связи с экстренной медицинской ситуацией, о которой пациент будет проинформирован в дальнейшем",
     "plesecheckbox": "Пожалуйста, примите условия доступа к данным пациента в экстренной ситуации",
     "fileuploaded": "Файл загружен",
-    "Contacts" : "контакты",
-    "WelcometotheAimedis" : "Добро пожаловать в Aimedis",
-    "VideoandChatsystem" :"Система видео и чата",
-    "ondemand" : "по требованию",
+    "Contacts": "контакты",
+    "WelcometotheAimedis": "Добро пожаловать в Aimedis",
+    "VideoandChatsystem": "Система видео и чата",
+    "ondemand": "по требованию",
     "welcome_to_pharmacy_page": "Добро пожаловать на страницу подключения аптеки Aimedis",
-    "send_pricription_to_pharmacy":"Отправить рецепты в аптеки",
+    "send_pricription_to_pharmacy": "Отправить рецепты в аптеки",
     "upload_scanned_prescription": "Загрузить отсканированный рецепт",
     "enter_patient_id": "Введите идентификатор пациента",
-    "enter_pharmacy_id":"ВВЕДИТЕ АПТЕЧНЫЙ ИД",
-    "search_pharmacy_name":"ПОИСК АПТЕКА ИМЯ",
-    "location_radious":"РАЙОН РАСПОЛОЖЕНИЯ (ПОКАЗАТЬ АПТЕКИ)",
-    "add_data_to_patient_timeline":"Добавьте эти данные во временную шкалу пациента",
-    "pharmacy_connect":"Аптека подключиться",
-    "search_for_patient_prescription":"Поиск рецепта пациента",
-    "patient_id_name":"ПАЦИЕНТ ID или ИМЯ",
-    "patients":"Пациент-",
-    "access_patient_data1":"Нормальный доступ к данным пациента",
-    "succ3" : "Данные успешно переданы",
-    "secured_organ_donor_pass":"Блокчейн обеспечен донором органа",
-    "select_organ_donar_or_not":"Выберите, являетесь ли вы донором органов или нет",
-    "incase_organ_declareation":"В случае, если мой орган / ткань считается пересаженным после моей смерти, я настоящим заявляю:",
-    "agreement_tranplantation_for_dead":"Да, я согласен с трансплантацией одного или нескольких моих органов / тканей после того, как врачи объявили меня мертвым",
-    "or":"или",
-    "accept_for_organ":"Я разрешаю это принять для следующих органов / тканей:",
+    "enter_pharmacy_id": "ВВЕДИТЕ АПТЕЧНЫЙ ИД",
+    "search_pharmacy_name": "ПОИСК АПТЕКА ИМЯ",
+    "location_radious": "РАЙОН РАСПОЛОЖЕНИЯ (ПОКАЗАТЬ АПТЕКИ)",
+    "add_data_to_patient_timeline": "Добавьте эти данные во временную шкалу пациента",
+    "pharmacy_connect": "Аптека подключиться",
+    "search_for_patient_prescription": "Поиск рецепта пациента",
+    "patient_id_name": "ПАЦИЕНТ ID или ИМЯ",
+    "patients": "Пациент-",
+    "access_patient_data1": "Нормальный доступ к данным пациента",
+    "succ3": "Данные успешно переданы",
+    "secured_organ_donor_pass": "Блокчейн обеспечен донором органа",
+    "select_organ_donar_or_not": "Выберите, являетесь ли вы донором органов или нет",
+    "incase_organ_declareation": "В случае, если мой орган / ткань считается пересаженным после моей смерти, я настоящим заявляю:",
+    "agreement_tranplantation_for_dead": "Да, я согласен с трансплантацией одного или нескольких моих органов / тканей после того, как врачи объявили меня мертвым",
+    "or": "или",
+    "accept_for_organ": "Я разрешаю это принять для следующих органов / тканей:",
     "allow_only_organ": "Я разрешаю это только для следующих органов / тканей:",
-    "dont_allow_transplantation":"Я НЕ разрешаю трансплантацию каких-либо своих органов или тканей",
-    "decided_by_person":"решается следующим лицом",
-    "free_remarks":"Бесплатные замечания можно сделать здесь:",
-    "welcome_aimedis_appointment":"Добро пожаловать в систему назначения Aimedis. Здесь вы можете выбрать специалиста, который соответствует вашим потребностям и идеально расположен. Вы можете найти доступные временные интервалы в поле рядом с информацией ниже. если нет доступных временных интервалов, вы можете войти в список ожидания и получить информацию, если временной интервал станет доступным.",
-    "arrenge_appointment":"Договориться о встрече",
-    "find_appointment":"Найти встречу",
-    "Range":"Диапазон (км)",
-    "search_city":"Поиск (город)",
-    "Online":"Онлайн",
-    "Offline":"Оффлайн",
-    "i_m_here":"Я здесь",
-    "second_openion_portal":"Портал второго мнения",
-    "welcome_second_openion":"Добро пожаловать во второе мнение Aimedis. Здесь вы получите независимое Второе Мнение в режиме онлайн от аккредитованных Aimedis специалистов второго Мнения. Пожалуйста, выберите специалиста по вашему выбору, а затем ответьте на следующие вопросы как можно более подробно. В последней части, пожалуйста, опишите ваши проблемы, ваши вопросы и любую информацию, которую вы можете нам предоставить. После просмотра деталей. Aimedis вернется к вам с указанием сроков и цены за второе мнение. После оплаты второе мнение будет отправлено на ваш почтовый аккаунт, во внутреннюю систему обмена сообщениями Aimedis или по обычной почте. Несмотря на это, возможно, потребуется организовать видеозвонок для более подробного обсуждения. Выбранный специалист вышлет вам временное предложение, если это необходимо",
-    "select_specialist":"Выберите своего специалиста",
-    "professionq":"Профессии?",
-    "upload_relavent_file":"Загрузить соответствующие файлы",
-    "appointmentService":"Служба назначения",
-    "u_can_cofigure":"Здесь вы можете настроить",
-    "hour_format":"часовой формат",
-    "Monday":"понедельник",
-		"Tuesday": "вторник",
-		"Wednesday":"среда",
-		"Thursday":"Четверг",
-		"Friday":"пятница",
-		"Saturday":"суббота",
-    "Sunday":"SuВоскресеньеnday",
-    "Breakslot":"Breakslot",
-    "Holidays":"каникулы",
-    "duration_of_timslots":"Длительность временных интервалов",
-    "minutes":"минут",
-    "appointment_brookedup":"Назначение может быть достигнуто до",
-    "ahead_actual_day":"дни перед фактическим днем",
-    "hour_prior_appointment":"часов до назначения",
-    "configure_day_online_appointment":"Настройка дней для онлайн-встречи",
-    "configure_day_practice":"Настроить дни для практики",
-    "online_appointment":"Интернет Назначение",
-    "private_appointment":"Частное назначение",
-    "detail_question":"Деталь / Вопрос",
-    "book_appointment_now":"Записаться на прием сейчас",
-    "cancel":"Отмена",
-    "Explanation" : "объяснение",
-    "SECONDOPINION" : "ВТОРОЕ МНЕНИЕ",
-    "SICKCERTIFICATE" : "Больной сертификат",
-    "eLearning" : "Электронное обучение и электронное обучение",
-    "aimedis_eLearning":"Aimedis Электронное обучение и курсы",
-    "reset_filter":"Сбросить фильтр",
-    "filter":"Фильтр",
-    "search_by_topic":"Поиск по теме",
-    "search_by_language":"Поиск по языку",
-    "search":"Поиск",
-    "english":"английский",
-		"german":"Немецкий",
-		"spanish":"испанский язык",
-		"russian":"русский",
-		"dutch":"нидерландский язык",
-		"chinease":"Китайский",
-		"portuguese":"португальский",
-    "swahili":"суахили",
-    "Free":"Free",
-    "earning_overall_sales":"Общий доход по всем продажам",
-    "payble_to_account":"Выплачивается на банковский счет",
-    "completed_payout":"Завершенные выплаты",
-    "pay_with_stripe":"Оплатить полосой",
-    "Payout_now":"Плати сейчас",
-    "shopping_cart":"Корзина",
-    "remove_wishlist":"Удалить из списка желаний",
-    "Wishlist":"добавить в корзину",
-    "PracticeAppointment" : "Назначение практики",
-    "PRESCRIPTIONLIST" : "СПИСОК ПРЕДПИСАНИЙ",
-    "Mnotvalids" : "Номер мобильного телефона недействителен",
-    "SearchContacts" : "Поиск контактов",
-    "AppointmentCalendar" : "Календарь назначений",
-		"ReturntoAppointmentCalendar": "Вернуться к назначенному календарю",
-		"Dates" : "Свидание",
-		"Starttime" : "Время начала",
-    "Endtime" : "Время окончания",
-    "SelectedDate" : "Выбранная дата",
-    "return_to_manage_appointment" : "Вернуться к назначению встречи",
-    "order_course":"Заказанный курс",
-    "return_to_archive" : "Перейти к временной шкале архива",
-    "Delete":"удалять",
-    "Backtotimeline" : "Вернуться к графику",
-    "Specify_kind_of_right_management":"Пожалуйста, уточните, какой тип управления вы предпочитаете?",
-		"opt_in":"Согласие: новый элемент автоматически скрывается от врачей и медсестер в случае регулярного доступа к профилю (PIN и ID) и должен быть вручную сделан ВИДИМЫМ (ПОКАЗАТЬ ВСЕГДА или ПОКАЗАТЬ ДО УКАЗАННОЙ ДАТЫ.)",
-		"opt_out":"Отказ: новый элемент автоматически ВИДЕТСЯ для врачей и медсестер в случае регулярного доступа к профилю (ПИН и ИД) и должен быть вручную сделан НЕВИДИМЫМ мной (СКРЫТЬ ВСЕГДА или СКРЫТЬ ДО УКАЗАННОЙ ДАТЫ.)",
-		"apply":"Применять",
-		"Apply_setting_All_items":"Примените правильную настройку управления ВСЕМИ пунктами",
-		"all_item_visible_now_until":"Сделайте все предметы ВИДИМЫМИ (пока не изменено)",
-		"all_item_visible_now_until_date":"Сделайте все предметы видимыми сейчас только до",
-		"all_item_invisible_now_until":"Сделайте все предметы НЕвидимыми сейчас (пока не изменено)",
-    "all_item_invisible_now_until_date":"Сделайте все предметы НЕВИДИМЫМИ сейчас только до",
-		"enterUnit" : "Пожалуйста, введите дату до, в которой вы выберите До точки",
-    "goto_timeline" : "Перейти к графику",
-    "create_patient":"Создать пациента",
-    "search_patient":"Поиск пациента",
+    "dont_allow_transplantation": "Я НЕ разрешаю трансплантацию каких-либо своих органов или тканей",
+    "decided_by_person": "решается следующим лицом",
+    "free_remarks": "Бесплатные замечания можно сделать здесь:",
+    "welcome_aimedis_appointment": "Добро пожаловать в систему назначения Aimedis. Здесь вы можете выбрать специалиста, который соответствует вашим потребностям и идеально расположен. Вы можете найти доступные временные интервалы в поле рядом с информацией ниже. если нет доступных временных интервалов, вы можете войти в список ожидания и получить информацию, если временной интервал станет доступным.",
+    "arrenge_appointment": "Договориться о встрече",
+    "find_appointment": "Найти встречу",
+    "Range": "Диапазон (км)",
+    "search_city": "Поиск (город)",
+    "Online": "Онлайн",
+    "Offline": "Оффлайн",
+    "i_m_here": "Я здесь",
+    "second_openion_portal": "Портал второго мнения",
+    "welcome_second_openion": "Добро пожаловать во второе мнение Aimedis. Здесь вы получите независимое Второе Мнение в режиме онлайн от аккредитованных Aimedis специалистов второго Мнения. Пожалуйста, выберите специалиста по вашему выбору, а затем ответьте на следующие вопросы как можно более подробно. В последней части, пожалуйста, опишите ваши проблемы, ваши вопросы и любую информацию, которую вы можете нам предоставить. После просмотра деталей. Aimedis вернется к вам с указанием сроков и цены за второе мнение. После оплаты второе мнение будет отправлено на ваш почтовый аккаунт, во внутреннюю систему обмена сообщениями Aimedis или по обычной почте. Несмотря на это, возможно, потребуется организовать видеозвонок для более подробного обсуждения. Выбранный специалист вышлет вам временное предложение, если это необходимо",
+    "select_specialist": "Выберите своего специалиста",
+    "professionq": "Профессии?",
+    "upload_relavent_file": "Загрузить соответствующие файлы",
+    "appointmentService": "Служба назначения",
+    "u_can_cofigure": "Здесь вы можете настроить",
+    "hour_format": "часовой формат",
+    "Monday": "понедельник",
+    "Tuesday": "вторник",
+    "Wednesday": "среда",
+    "Thursday": "Четверг",
+    "Friday": "пятница",
+    "Saturday": "суббота",
+    "Sunday": "SuВоскресеньеnday",
+    "Breakslot": "Breakslot",
+    "Holidays": "каникулы",
+    "duration_of_timslots": "Длительность временных интервалов",
+    "minutes": "минут",
+    "appointment_brookedup": "Назначение может быть достигнуто до",
+    "ahead_actual_day": "дни перед фактическим днем",
+    "hour_prior_appointment": "часов до назначения",
+    "configure_day_online_appointment": "Настройка дней для онлайн-встречи",
+    "configure_day_practice": "Настроить дни для практики",
+    "online_appointment": "Интернет Назначение",
+    "private_appointment": "Частное назначение",
+    "detail_question": "Деталь / Вопрос",
+    "book_appointment_now": "Записаться на прием сейчас",
+    "cancel": "Отмена",
+    "Explanation": "объяснение",
+    "SECONDOPINION": "ВТОРОЕ МНЕНИЕ",
+    "SICKCERTIFICATE": "Больной сертификат",
+    "eLearning": "Электронное обучение и электронное обучение",
+    "aimedis_eLearning": "Aimedis Электронное обучение и курсы",
+    "reset_filter": "Сбросить фильтр",
+    "filter": "Фильтр",
+    "search_by_topic": "Поиск по теме",
+    "search_by_language": "Поиск по языку",
+    "search": "Поиск",
+    "english": "английский",
+    "german": "Немецкий",
+    "spanish": "испанский язык",
+    "russian": "русский",
+    "dutch": "нидерландский язык",
+    "chinease": "Китайский",
+    "portuguese": "португальский",
+    "swahili": "суахили",
+    "Free": "Free",
+    "earning_overall_sales": "Общий доход по всем продажам",
+    "payble_to_account": "Выплачивается на банковский счет",
+    "completed_payout": "Завершенные выплаты",
+    "pay_with_stripe": "Оплатить полосой",
+    "Payout_now": "Плати сейчас",
+    "shopping_cart": "Корзина",
+    "remove_wishlist": "Удалить из списка желаний",
+    "Wishlist": "добавить в корзину",
+    "PracticeAppointment": "Назначение практики",
+    "PRESCRIPTIONLIST": "СПИСОК ПРЕДПИСАНИЙ",
+    "Mnotvalids": "Номер мобильного телефона недействителен",
+    "SearchContacts": "Поиск контактов",
+    "AppointmentCalendar": "Календарь назначений",
+    "ReturntoAppointmentCalendar": "Вернуться к назначенному календарю",
+    "Dates": "Свидание",
+    "Starttime": "Время начала",
+    "Endtime": "Время окончания",
+    "SelectedDate": "Выбранная дата",
+    "return_to_manage_appointment": "Вернуться к назначению встречи",
+    "order_course": "Заказанный курс",
+    "return_to_archive": "Перейти к временной шкале архива",
+    "Delete": "удалять",
+    "Backtotimeline": "Вернуться к графику",
+    "Specify_kind_of_right_management": "Пожалуйста, уточните, какой тип управления вы предпочитаете?",
+    "opt_in": "Согласие: новый элемент автоматически скрывается от врачей и медсестер в случае регулярного доступа к профилю (PIN и ID) и должен быть вручную сделан ВИДИМЫМ (ПОКАЗАТЬ ВСЕГДА или ПОКАЗАТЬ ДО УКАЗАННОЙ ДАТЫ.)",
+    "opt_out": "Отказ: новый элемент автоматически ВИДЕТСЯ для врачей и медсестер в случае регулярного доступа к профилю (ПИН и ИД) и должен быть вручную сделан НЕВИДИМЫМ мной (СКРЫТЬ ВСЕГДА или СКРЫТЬ ДО УКАЗАННОЙ ДАТЫ.)",
+    "apply": "Применять",
+    "Apply_setting_All_items": "Примените правильную настройку управления ВСЕМИ пунктами",
+    "all_item_visible_now_until": "Сделайте все предметы ВИДИМЫМИ (пока не изменено)",
+    "all_item_visible_now_until_date": "Сделайте все предметы видимыми сейчас только до",
+    "all_item_invisible_now_until": "Сделайте все предметы НЕвидимыми сейчас (пока не изменено)",
+    "all_item_invisible_now_until_date": "Сделайте все предметы НЕВИДИМЫМИ сейчас только до",
+    "enterUnit": "Пожалуйста, введите дату до, в которой вы выберите До точки",
+    "goto_timeline": "Перейти к графику",
+    "create_patient": "Создать пациента",
+    "search_patient": "Поиск пациента",
     "err_file_formart": "Система не поддерживает этот формат файла",
-    "Dateofvaccination" : "Дата прививки",
-    "firstPatient_id":"Пожалуйста, сначала заполните идентификационный номер пациента и аптеки",
+    "Dateofvaccination": "Дата прививки",
+    "firstPatient_id": "Пожалуйста, сначала заполните идентификационный номер пациента и аптеки",
     "ShowItems": "Скрыть этот предмет",
-    "RecommendedDoctors" : "Doctores recomendados",
-    "Pleasefillthedurationtimeslot" : "Пожалуйста, заполните интервал времени",
-    "RequestedServices" : "Запрошенные услуги",
-    "ACCEPTED" : "ПРИНЯТО",
-    "DECLINED" : "СНИЖЕНИЕ",
-    "ProfileUpdate" : "Профиль обновлен",
-    "PasswordNC" : "Пароль и подтверждение пароля не совпадают",
-    "Familydoctor" :"Семейный врач"
+    "RecommendedDoctors": "Doctores recomendados",
+    "Pleasefillthedurationtimeslot": "Пожалуйста, заполните интервал времени",
+    "RequestedServices": "Запрошенные услуги",
+    "ACCEPTED": "ПРИНЯТО",
+    "DECLINED": "СНИЖЕНИЕ",
+    "ProfileUpdate": "Профиль обновлен",
+    "PasswordNC": "Пароль и подтверждение пароля не совпадают",
+    "Familydoctor": "Семейный врач",
+    "Log_into": "войти в",
+    "Register_email": "Адрес электронной почты",
+    "login_Password":"пароль",
+    "login_Forgotpassword":"Забыли пароль?",
+    "login_an_account":"нет учетной записи?",
+    "login_Registerhere": "Зарегистрируйтесь здесь",
+    "recEmp_FirstName":"Имя",
+    "recEmp_LastName": "Фамилия",
+    "Register_Mobilenumber":"Номер мобильного",
+    "Register_activate_auth":"Активировать двухфакторную аутентификацию",
+    "Register_Accounttype":"Тип аккаунта",
+    "capab_Patients":"Пациент",
+    "capab_Doctors": "Доктор",
+    "Pharmacist":"Фармацевт",
+    "Nurse": "Медсестра",
+    "Register_want_register":"Я хочу подписаться на информационный бюллетень здравоохранения Aimedis (необязательно).",
+    "Register_Clicking_box":"Устанавливая флажок, я соглашаюсь с нашими условиями использования и принимаю сбор, обработку данных и использование моих личных данных. Подробнее в нашей политике конфиденциальности.",
+    "Register_clickingbox":"Установив флажок, я подтверждаю, что являюсь профессиональным врачом. Я должен предоставить доказательство моей лицензии на практику, которое я загружаю сейчас или предоставляю позже. Пока я не предоставлю это доказательство, я не могу связаться с пациентами.",
+    "Register_CREATE": "РЕГИСТРАЦИЯ",
+    "Register_havAC":"Иметь аккаунт?",
+    "Register_lohinher": "Авторизуйтесь здесь",
+    "Register_Passwordshould": "Пароль должен содержать как минимум:",
+    "Register_characters": "8 символов",
+    "Register_letter": "1 буква",
+    "Register_number": "1 номер",
+    "Register_special": "1 специальный символ",
+    "forget_password":"Забыть пароль",
+    "plz_enter_valid_email":"Пожалуйста, введите действительный адрес электронной почты",
+    "password_reset":"Сброс пароля",
+    "page_not_found":"Страница не найдена",
+    "page_temparary_unavailable":"Страница, которую вы ищете, могла быть удалена, если ее имя было изменено или она временно недоступна.",
+    "go_to_home":"Идти домой"
   }
 }
