--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -660,6 +660,7 @@
     "password_reset":"Сброс пароля",
     "page_not_found":"Страница не найдена",
     "page_temparary_unavailable":"Страница, которую вы ищете, могла быть удалена, если ее имя было изменено или она временно недоступна.",
-    "go_to_home":"Идти домой"
+    "go_to_home":"Идти домой",
+    "slct_time_slot":"Выберите временной интервал"
   }
 }
