--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -517,6 +517,7 @@
 		"page_not_found":"Ukurasa Haukupatikana",
 		"Oops": "Lo!",
 		"page_temparary_unavailable":"Ukurasa unaotafuta unaweza kuwa umeondoa baeen ikiwa jina lake limebadilishwa au halipatikani kwa muda.",
-		"go_to_home":"Nenda nyumbani"
+		"go_to_home":"Nenda nyumbani",
+		"slct_time_slot":"Chagua muda uliopangwa"
 	}
 }
