Add the pharmacy full section

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -1043,7 +1043,7 @@
 		"prescribed":"Prescribed",
 		"specific_date":"Specific Date",
 		"interval":"Interval",
-		"to_be_consume":"To be comsumed at",
+		"to_be_consume":"To be consumed at",
 		"reminder":"Reminder",
 		"reminder_time_taken":"Reminder time taken",
 		"notes":"Notes",
