Appointmen at patient section

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -998,7 +998,7 @@
 		"emergency":"Emergency",
 		"diagnosed":"Diagnosed",
 		"allergy":"Allergy",
-		"date_doc_visit":"Date Dcotor Visit",
+		"date_doc_visit":"Date Doctor Visit",
 		"day_doc_visit":"Doctor Day Visit",
 		"welcome":"Welcome",
 		"ur_helthcare_on_blockchain":"Your healthcare platform on the Blockchain",
