trello issues, and chat

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -1096,7 +1096,7 @@
 		"range":"range",
 		"see_avlbl_date":"SEE AVAILABLE DATES FOR",
 		"vdo_call":"Video call",
-		"consultancy_cstm_calnder":"Consultancy (custom calendar)",
+		"consultancy_cstm_calnder":"Consultancy appointment",
 		"location_of_srvc":"Location of service",
 		"find_apointment":"Find Appointment",
 		"allow_location_access":"Allow location access",
