--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -696,6 +696,12 @@
 		"Oops":"Opa",
 		"page_temparary_unavailable":"A página que você está procurando pode ter sido removida e seu nome foi alterado ou está temporariamente indisponível.",
 		"go_to_home":"Ir para casa",
-		"slct_time_slot":"Selecione o horário"
+		"slct_time_slot":"Selecione o horário",
+		"code_not_verified":"O código não foi verificado.",
+		"email_not_valid":"E-mail não é válido",
+		"password_cant_empty":"A senha não pode ficar em branco",
+		"user_not_exist":"Usuário não existe",
+		"user_is_blocked":"O usuário está bloqueado",
+		"wrong_password":"Senha incorreta"
 	}
 }
