--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -661,6 +661,12 @@
     "page_not_found":"Страница не найдена",
     "page_temparary_unavailable":"Страница, которую вы ищете, могла быть удалена, если ее имя было изменено или она временно недоступна.",
     "go_to_home":"Идти домой",
-    "slct_time_slot":"Выберите временной интервал"
+    "slct_time_slot":"Выберите временной интервал",
+    "code_not_verified":"Код не проверен.",
+    "email_not_valid":"Email не является допустимым",
+    "password_cant_empty":"Пароль не может быть пустым",
+    "user_not_exist":"Пользователь не существует",
+    "user_is_blocked":"Пользователь заблокирован",
+    "wrong_password":"Неправильный пароль"
   }
 }
