--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -799,6 +799,8 @@
 		"plz_mention_date_time": "Please mention the date-time for until",
 		"make_all_item_visible_now_untill": "Make all items VISIBLE now (Until changed) ",
 		"make_all_item_visible_untill": "Make all items VISIBLE until",
+		"make_all_item_hide_now_untill": "Make all items HIDE now (Until changed) ",
+		"make_all_item_hide_untill": "Make all items HIDE until",
 		"patient_id": "Patient ID",
 		"kyc": "KYC ",
 		"enter_healthcare_and_upload_data": "Please enter your healthcare insurance data and upload a copy of your ID and heathcare insurance card into your account",
