doc language completed

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -687,7 +687,7 @@
 		"Mnotvalids": "手机号码无效",
 		"Pharmacist":"药剂师",
 		"Nurse": "护士",
-		"Professional":"Mtaalamu",
+		"Professional":"专业的",
 		"forget_password":"忘记密码",
 		"plz_enter_valid_email":"请输入有效的电子邮件",
 		"password_reset":"重设密码",
