--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -631,7 +631,7 @@
 		"login_Email_address": "Endereço de e-mail",
 		"login_Password": "Senha",
 		"login_Forgotpassword": "Esqueceu a senha?",
-		"login_LOGIN_btn": "LOGIN",
+		"login_LOGIN_btn": "Conecte-se",
 		"login_an_account": "Você não tem uma conta?",
 		"login_Registerhere": "Registre-se aqui",
 		"reg_content": "reg_content",
