--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -631,7 +631,7 @@
 		"login_Email_address": "E-Mail Adresse",
 		"login_Password": "Passwort",
 		"login_Forgotpassword": "Passwort vergessen?",
-		"login_LOGIN_btn": "LOG IN",
+		"login_LOGIN_btn": "Anmeldung",
 		"login_an_account": "Noch keinen Account?",
 		"login_Registerhere": "Hier registrieren",
 		"reg_content": "reg_content",
