the trello issues and ashish sir style

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -735,7 +735,7 @@
 		"spoken": "spoken",
 		"insurance": "Insurance",
 		"add_more": "Add more",
-		"company": "Compnay",
+		"company": "Company",
 		"of": "of",
 		"info_copied": "Information is Copied",
 		"profile_updated": "Profile is updated",
