add Ashish sir changes in doctor and other, correct dark mode issue, and trello issues

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -692,7 +692,7 @@
 		"Staff_SENDREC": "SEND RECRUITMENT FORM",
 		"profile": "Profile",
 		"information": "Information",
-		"profile_info": "This is your profile information, which is accessible to your trusted Doctors and those you share your Profile ID nad PIN with.",
+		"profile_info": "This is your profile information, which is accessible to your trusted Doctors and those you share your Profile ID and PIN with.",
 		"ID": "ID",
 		"speciality": "Speciality",
 		"pin": "PIN",
