Trello issues of patient and doctor

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -1137,7 +1137,7 @@
 		"here_u_see_diabetes": "Here you see what diabetes is, how it comes to diabetes and why a good treatment is so crucial.",
 		"new_entry": "New entry",
 		"home_add_mailbox": "Home address mailbox",
-		"cancel_details": "Cancel details",
+		"cancel_details": "Close details",
 		"new_rqst": "New Requests",
 		"time_slot_alredy_booke_calender": "Time slot is already booked on your calendar",
 		"or": "or",
