--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -811,7 +811,7 @@
 		"updated_success": "updated successfully",
 		"file_uploaded": "File is uploaded successfully",
 		"upload_id_card": "Upload a photo of your ID Card",
-		"by_clicking_accept_aimedis_term": "By clicking this you accept Aimeidis terms and its privacy policy",
+		"by_clicking_accept_aimedis_term": "By clicking this you accept Aimedis terms and its privacy policy",
 		"attached_doc": "Attached Document",
 		"u_r_nvr_obligate_to_upload_doc": "You are never obligated to upload your license or any other proof of ID.",
 		"in_critical_enviroment_id": "In the critical environment it makes a unique identification and comparison to the existing helthcare data much easier, when you do. Also the deduction of healthcare services with your insurance company is much easier that way.",
